clap_derive/tests/ui/bool_arg_enum.stderr
error: enum is meaningless for bool
 --> $DIR/bool_arg_enum.rs:7:11
  |
7 |     opts: bool,
  |           ^^^^
